integrate github auth

--- a/frontend_auth/src/index.css
+++ b/frontend_auth/src/index.css
@@ -69,6 +69,13 @@ button i{
   }
 }
 
+.auth_button{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100px;
+}
+
 .profile {
   display: flex;
   flex-direction: column;
